--- a/info.yaml
+++ b/info.yaml
@@ -69,5 +69,5 @@ documentation:
   external_hw:  ""      # Describe any external hardware needed
   discord:      "vijayan_27027"      # Your discord handle, used for communication and automatically assigning tapeout role after a submission
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
-  clock_hz:     100       # Clock frequency in Hz (if required)
+  clock_hz:     100000000       # Clock frequency in Hz (if required)
   picture:      ""      # relative path to a picture in your repository (must be 512kb or less)
